# slack-exporter

./: .gitignore  Dockerfile  README.md  config.py  download_attachments.sh  google_drive_uploader.py  main.py  orchestration.py  pyproject.toml  requirements.txt  slack_exporter.py  tools.py
slack_exporter/: config.py  etl.py  logger_config.py  main.py  orchestration.py  tools.py
slack_exporter/exporter/: slack_exporter.py
slack_exporter/extract/: exporter.py  slack_exporter.py
slack_exporter/load/: google_drive_uploader.py  mega_uploader.py  uploader.py
slack_exporter/transform/: compress.py  organize.py  tools.py
slack_exporter/uploader/: google_drive_uploader.py  mega_uploader.py
